Changes layout sidebar

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -34,6 +34,10 @@
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
+#copyright {
+  position: absolute;
+  bottom: 0;
+}
 @media (min-width: 48em) {
   html {
     font-size: 16px;
@@ -109,7 +113,6 @@ a.sidebar-nav-item:focus {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
-    bottom: 1rem;
     left:   1rem;
   }
 }
