--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,9 +27,8 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
-
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
+
+  <p id="copyright">&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
 </div>
