--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Merriweather Sans", "PT Sans", Helvetica, Arial, sans-serif;
 }
 #copyright {
   position: absolute;
