--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,10 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  por <span class="post-author">
-    {% assign author_data = site.data.members | where:"username", page.author %}
-    {% assign author = author_data | first %}  
-    {{ author.username }}
-  </span>
+  <div class="post-info">
+    <span class="post-date">{{ page.date | date_to_string }}</span>
+    by {% include author-url.html %}
+  </div>
   {{ content }}
   <hr />
   {% include author-info.html %}
