--- a/_includes/author-info.html
+++ b/_includes/author-info.html
@@ -1,11 +1,11 @@
 {% assign author_data = site.data.members | where:"username", page.author %}
 {% assign author = author_data | first %}  
 
-<p>
+<div class="author-header">
   {% if author.photoUri %}
     <img class="photo img-circle pull-left" src="{{ author.photoUri }}" alt="photo of {{ author.name }}" width="55px" height="55px">
   {% endif %}
-  {{ author.name }}
+  <h3>{{ author.name }}</h3>
 </p>
 <p>
   {{ author.bio }}
