--- a/_includes/author-info.html
+++ b/_includes/author-info.html
@@ -6,7 +6,7 @@
     <img class="photo img-circle pull-left" src="{{ author.photoUri }}" alt="photo of {{ author.name }}" width="55px" height="55px">
   {% endif %}
   <h3>{{ author.name }}</h3>
-</p>
+</div>
 <p>
   {{ author.bio }}
 </p>
