--- a/_includes/author-info.html
+++ b/_includes/author-info.html
@@ -3,7 +3,7 @@
 
 <div class="author-header">
   {% if author.photoUri %}
-    <img class="photo img-circle pull-left" src="{{ author.photoUri }}" alt="photo of {{ author.name }}" width="55px" height="55px">
+    <img class="img-circle pull-left" src="{{ author.photoUri }}" alt="photo of {{ author.name }}" width="55px" height="55px">
   {% endif %}
   <h3>{{ author.name }}</h3>
 </div>
